--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<div id="app"></div>
+<div id="app">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"></a>
+    </div>
+  </nav>
+
+  <header class="pb-3 border-bottom bg-light">
+    <a
+      href="/"
+      class="
+        d-flex
+        justify-content-center
+        align-items-center
+        text-dark text-decoration-none
+        mb-2
+      "
+    >
+      <span class="fs-4">SPA Banking app</span>
+    </a>
+
+    <div class="d-flex justify-content-center align-items-center">
+      <button type="button" class="btn btn-primary">Primary</button>
+      <button type="button" class="ms-3 btn btn-info">Info</button>
+      <button type="button" class="ms-3 btn btn-danger">Danger</button>
+    </div>
+  </header>
+</div>
