--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 <div id="app">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"></a>
-    </div>
-  </nav>
-
-  <header class="pb-3 border-bottom bg-light">
+  <header class="py-4 border-bottom bg-light">
     <a
       href="/"
       class="
@@ -16,13 +10,56 @@
         mb-2
       "
     >
-      <span class="fs-4">SPA Banking app</span>
+      <h1>SPA Banking app</h1>
     </a>
 
     <div class="d-flex justify-content-center align-items-center">
-      <button type="button" class="btn btn-primary">Primary</button>
-      <button type="button" class="ms-3 btn btn-info">Info</button>
-      <button type="button" class="ms-3 btn btn-danger">Danger</button>
+      <button type="button" class="btn btn-primary">Accounts</button>
+      <button type="button" class="ms-3 btn btn-info">Add account</button>
+      <button type="button" class="ms-3 btn btn-danger">
+        Edit / Delete account
+      </button>
     </div>
   </header>
+
+  <main class="container-fluid py-4">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-8">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-8">
+            <h2>Accounts</h2>            
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">First</th>
+                  <th scope="col">Last</th>
+                  <th scope="col">Handle</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Mark</td>
+                  <td>Otto</td>
+                  <td>@mdo</td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Jacob</td>
+                  <td>Thornton</td>
+                  <td>@fat</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td colspan="2">Larry the Bird</td>
+                  <td>@twitter</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </div>
