--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
       <button id="addAccBtn" type="button" class="ms-3 btn btn-info">
         Add account
       </button>
-      <button id="editDeleteBtn" type="button" class="ms-3 btn btn-danger">
+      <button
+        id="editDeleteBtn"
+        type="button"
+        class="ms-3 btn btn-danger w-100"
+      >
         Edit / Delete account
       </button>
     </div>
