--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button
         id="editDeleteBtn"
         type="button"
-        class="ms-3 btn btn-danger w-100"
+        class="ms-3 btn btn-danger"
       >
         Edit / Delete account
       </button>
