--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
       <button id="addAccBtn" type="button" class="ms-3 btn btn-info">
         Add account
       </button>
-      <button
-        id="editDeleteBtn"
-        type="button"
-        class="ms-3 btn btn-danger"
-      >
+      <button id="editDeleteBtn" type="button" class="ms-3 btn btn-danger">
         Edit / Delete account
       </button>
     </div>
@@ -47,6 +43,16 @@
               </thead>
               <tbody id="mainBody"></tbody>
             </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="formView" class="row justify-content-center">
+      <div class="col-12 col-md-8">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-10">
+            <h2>Add account</h2>
           </div>
         </div>
       </div>
