--- a/index.html
+++ b/index.html
@@ -122,9 +122,11 @@
                   <th scope="col">Name</th>
                   <th scope="col">Deposit</th>
                   <th scope="col">Credit card</th>
+                  <th scope="col">Edit</th>
+                  <th scope="col">Delete</th>
                 </tr>
               </thead>
-              <tbody id="accountsBody"></tbody>
+              <tbody id="editDeleteAccountBody"></tbody>
             </table>
 
           </div>
