--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
       <button id="showAddAccountBtn" type="button" class="ms-3 btn btn-info">
         Add account
       </button>
-      <button id="showEditBtn" type="button" class="ms-3 btn btn-danger">
-        Edit account
-      </button>
     </div>
   </header>
 
@@ -99,7 +96,7 @@
               </div>
               <button
                 id="addNewAccountBtn"
-                class="btn btn-primary w-100"
+                class="btn btn-info w-100"
                 type="button"
               >
                 Add account
@@ -116,7 +113,57 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-10">
             <h2 class="mb-4">Edit account</h2>
-            <div id="editDeleteAccountBody"></div>
+            <div id="editAccountBody">
+              <form>
+                <div class="mb-3">
+                  <label for="editAccountId" class="form-label">ID</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="editAccountId"
+                    aria-describedby="editAccountId"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="editAccountName" class="form-label">Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="editAccountName"
+                    aria-describedby="editAccountName"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="editAccountDeposit" class="form-label"
+                    >Deposit</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="editAccountDeposit"
+                    aria-describedby="editAccountDeposit"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="editAccountCreditCard" class="form-label"
+                    >Credit card</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="editAccountCreditCard"
+                    aria-describedby="editAccountCreditCard"
+                  />
+                </div>
+                <button
+                  id="editAccountBtn"
+                  class="btn btn-warning w-100"
+                  type="button"
+                >
+                  Edit account
+                </button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
