--- a/index.html
+++ b/index.html
@@ -61,49 +61,53 @@
 
             <form>
               <div class="mb-3">
-                <label for="accountId" class="form-label">ID</label>
+                <label for="accountInputId" class="form-label">ID</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="accountId"
-                  aria-describedby="accountId"
+                  id="accountInputId"
+                  aria-describedby="accountInputId"
                 />
               </div>
               <div class="mb-3">
-                <label for="accountName" class="form-label">Name</label>
+                <label for="accountInputNameSurname" class="form-label"
+                  >Name</label
+                >
                 <input
                   type="text"
                   class="form-control"
-                  id="accountName"
-                  aria-describedby="accountName"
+                  id="accountInputNameSurname"
+                  aria-describedby="accountInputNameSurname"
                 />
               </div>
               <div class="mb-3">
-                <label for="accountDeposit" class="form-label">Deposit</label>
+                <label for="accountInputDeposit" class="form-label"
+                  >Deposit</label
+                >
                 <input
                   type="text"
                   class="form-control"
-                  id="accountDeposit"
-                  aria-describedby="accountDeposit"
+                  id="accountInputDeposit"
+                  aria-describedby="accountInputDeposit"
                 />
               </div>
               <div class="mb-3">
-                <label for="accountCreditCard" class="form-label"
+                <label for="accountInputCreditCard" class="form-label"
                   >Credit card</label
                 >
                 <input
                   type="text"
                   class="form-control"
-                  id="accountCreditCard"
-                  aria-describedby="accountCreditCard"
+                  id="accountInputCreditCard"
+                  aria-describedby="accountInputCreditCard"
                 />
               </div>
               <button
-                id="addNewAccountBtn"
+                id="addNewAccountFormBtn"
                 class="btn btn-info w-100"
                 type="button"
               >
-                Add account
+                Add new account
               </button>
             </form>
           </div>
@@ -120,47 +124,49 @@
 
             <form>
               <div class="mb-3">
-                <label for="editAccountId" class="form-label">ID</label>
+                <label for="editAccountInputId" class="form-label">ID</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="editAccountId"
-                  aria-describedby="editAccountId"
+                  id="editAccountInputId"
+                  aria-describedby="editAccountInputId"
                 />
               </div>
               <div class="mb-3">
-                <label for="editAccountNameSurname" class="form-label">Name</label>
+                <label for="editAccountInputNameSurname" class="form-label"
+                  >Name</label
+                >
                 <input
                   type="text"
                   class="form-control"
-                  id="editAccountNameSurname"
-                  aria-describedby="editAccountNameSurname"
+                  id="editAccountInputNameSurname"
+                  aria-describedby="editAccountInputNameSurname"
                 />
               </div>
               <div class="mb-3">
-                <label for="editAccountDeposit" class="form-label"
+                <label for="editAccountInputDeposit" class="form-label"
                   >Deposit</label
                 >
                 <input
                   type="text"
                   class="form-control"
-                  id="editAccountDeposit"
-                  aria-describedby="editAccountDeposit"
+                  id="editAccountInputDeposit"
+                  aria-describedby="editAccountInputDeposit"
                 />
               </div>
               <div class="mb-3">
-                <label for="editAccountCreditCard" class="form-label"
+                <label for="editAccountInputCreditCard" class="form-label"
                   >Credit card</label
                 >
                 <input
                   type="text"
                   class="form-control"
-                  id="editAccountCreditCard"
-                  aria-describedby="editAccountCreditCard"
+                  id="editAccountInputCreditCard"
+                  aria-describedby="editAccountInputCreditCard"
                 />
               </div>
               <button
-                id="editAccountBtn"
+                id="editAccountFormBtn"
                 class="btn btn-warning w-100"
                 type="button"
               >
@@ -173,5 +179,3 @@
     </div>
   </main>
 </div>
-
-
