--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="col-12 col-md-10">
             <h2 class="mb-4">Add account</h2>
 
-            <form>
+            <form id="addAccountForm">
               <div class="mb-3">
                 <label for="accountInputId" class="form-label">ID</label>
                 <input
