--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="col-12 col-md-10">
             <h2 class="mb-4">Edit account</h2>
 
-            <form>
+            <form id="editAccountForm">
               <div class="mb-3">
                 <label for="editAccountInputId" class="form-label">ID</label>
                 <input
