--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         class="ms-3 btn btn-info"
       >
         Add account
-      </button>
+      </button>    
     </div>
   </header>
 
@@ -34,7 +34,7 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-10">
             <h2 class="mb-4">Accounts</h2>
-            <table class="table table-striped">
+            <table id="accountsTable" class="table table-striped">
               <thead>
                 <tr>
                   <th scope="col">ID#</th>
